--- a/test/integration/docker-compose-python-redis.yml
+++ b/test/integration/docker-compose-python-redis.yml
@@ -50,6 +50,7 @@ services:
       BEYLA_OTEL_TRACES_INSTRUMENTATIONS: "redis"
       BEYLA_OTEL_METRICS_INSTRUMENTATIONS: "redis"
       BEYLA_OTEL_METRICS_FEATURES: "application"
+      BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
     depends_on:
       testserver:
         condition: service_started
