--- a/test/integration/docker-compose-http2.yml
+++ b/test/integration/docker-compose-http2.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   testclient:
@@ -24,7 +24,7 @@ services:
         condition: service_started
       jaeger:
         condition: service_started
-      
+
   autoinstrumenter:
     build:
       context: ../..
@@ -43,6 +43,7 @@ services:
       GOCOVERDIR: "/coverage"
       BEYLA_TRACE_PRINTER: "text"
       BEYLA_METRICS_INTERVAL: "10ms"
+      BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
       BEYLA_BPF_BATCH_TIMEOUT: "10ms"
       BEYLA_LOG_LEVEL: "DEBUG"
       BEYLA_BPF_DEBUG: "TRUE"
@@ -102,12 +103,10 @@ services:
     image: jaegertracing/all-in-one:1.57
     ports:
       - "16686:16686" # Query frontend
-      - "4317:4317"   # OTEL GRPC traces collector
-      - "4318:4318"   # OTEL HTTP traces collector
+      - "4317:4317" # OTEL GRPC traces collector
+      - "4318:4318" # OTEL HTTP traces collector
     environment:
       - COLLECTOR_OTLP_ENABLED=true
       - LOG_LEVEL=debug
-
-
 # curl http://localhost:16686/api/services
 # curl http://localhost:16686/api/traces?service=testserver
