--- a/test/integration/docker-compose-multiexec-host.yml
+++ b/test/integration/docker-compose-multiexec-host.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   testserver:
@@ -34,7 +34,7 @@ services:
       - "8900:8900"
     environment:
       LOG_LEVEL: DEBUG
-      
+
   # image that runs two instances of the 'testserver' executable
   # Used to test the deduplication
   # of metrics when they come from the same executable file
@@ -141,6 +141,7 @@ services:
       BEYLA_HOSTNAME: "beyla"
       BEYLA_INTERNAL_METRICS_PROMETHEUS_PORT: 8999
       BEYLA_INTERNAL_METRICS_PROMETHEUS_PATH: /metrics
+      BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
       BEYLA_BPF_DISABLE_BLACK_BOX_CP: "${BEYLA_BPF_DISABLE_BLACK_BOX_CP}"
       BEYLA_BPF_CONTEXT_PROPAGATION: "${BEYLA_BPF_CONTEXT_PROPAGATION}"
       BEYLA_BPF_TRACK_REQUEST_HEADERS: "${BEYLA_BPF_TRACK_REQUEST_HEADERS}"
@@ -157,14 +158,14 @@ services:
         limits:
           memory: 125M
     restart: unless-stopped
-    command: [ "--config=/etc/otelcol-config/otelcol-config-4017.yml" ]
+    command: ["--config=/etc/otelcol-config/otelcol-config-4017.yml"]
     volumes:
       - ./configs/:/etc/otelcol-config
     ports:
-      - "4017"          # OTLP over gRPC receiver
-      - "4018:4018"     # OTLP over HTTP receiver
-      - "9464"          # Prometheus exporter
-      - "8888"          # metrics endpoint
+      - "4017" # OTLP over gRPC receiver
+      - "4018:4018" # OTLP over HTTP receiver
+      - "9464" # Prometheus exporter
+      - "8888" # metrics endpoint
     depends_on:
       prometheus:
         condition: service_started
@@ -187,12 +188,10 @@ services:
     image: jaegertracing/all-in-one:1.57
     ports:
       - "16686:16686" # Query frontend
-      - "4317:4317"   # OTEL GRPC traces collector
-      - "4318:4318"   # OTEL HTTP traces collector
+      - "4317:4317" # OTEL GRPC traces collector
+      - "4318:4318" # OTEL HTTP traces collector
     environment:
       - COLLECTOR_OTLP_ENABLED=true
       - LOG_LEVEL=debug
-
-
 # curl http://localhost:16686/api/services
 # curl http://localhost:16686/api/traces?service=testserver
