--- a/test/integration/docker-compose-nodejs-dist.yml
+++ b/test/integration/docker-compose-nodejs-dist.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   testserver_b:
@@ -57,6 +57,7 @@ services:
       BEYLA_INTERNAL_METRICS_PROMETHEUS_PORT: 8999
       BEYLA_INTERNAL_METRICS_PROMETHEUS_PATH: /metrics
       BEYLA_BPF_HTTP_REQUEST_TIMEOUT: "5s"
+      BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
       BEYLA_PROCESSES_INTERVAL: "100ms"
       BEYLA_OTEL_METRICS_FEATURES: "application,application_process,application_span,application_service_graph"
     depends_on:
@@ -74,14 +75,14 @@ services:
         limits:
           memory: 125M
     restart: unless-stopped
-    command: [ "--config=/etc/otelcol-config/otelcol-config-4017.yml" ]
+    command: ["--config=/etc/otelcol-config/otelcol-config-4017.yml"]
     volumes:
       - ./configs/:/etc/otelcol-config
     ports:
-      - "4017"          # OTLP over gRPC receiver
-      - "4018:4018"     # OTLP over HTTP receiver
-      - "9464"          # Prometheus exporter
-      - "8888"          # metrics endpoint
+      - "4017" # OTLP over gRPC receiver
+      - "4018:4018" # OTLP over HTTP receiver
+      - "9464" # Prometheus exporter
+      - "8888" # metrics endpoint
     depends_on:
       prometheus:
         condition: service_started
@@ -104,8 +105,9 @@ services:
     image: jaegertracing/all-in-one:1.57
     ports:
       - "16686:16686" # Query frontend
-      - "4317:4317"   # OTEL GRPC traces collector
-      - "4318:4318"   # OTEL HTTP traces collector
+      - "4317:4317" # OTEL GRPC traces collector
+      - "4318:4318" # OTEL HTTP traces collector
     environment:
       - COLLECTOR_OTLP_ENABLED=true
       - LOG_LEVEL=debug
+
