--- a/test/integration/docker-compose-other-grpc.yml
+++ b/test/integration/docker-compose-other-grpc.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   # old gRPC
@@ -23,7 +23,7 @@ services:
 
   # gRPC client going nowhere
   grpcpinger:
-    build: 
+    build:
       context: ../../
       dockerfile: test/integration/components/grpcpinger/Dockerfile
     image: hatest-grpcpinger
@@ -54,6 +54,7 @@ services:
       BEYLA_SERVICE_NAMESPACE: "integration-test"
       BEYLA_METRICS_INTERVAL: "10ms"
       BEYLA_BPF_BATCH_TIMEOUT: "10ms"
+      BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
       BEYLA_LOG_LEVEL: "DEBUG"
       BEYLA_BPF_DEBUG: "TRUE"
       BEYLA_INTERNAL_METRICS_PROMETHEUS_PORT: 8999
@@ -70,14 +71,14 @@ services:
         limits:
           memory: 125M
     restart: unless-stopped
-    command: [ "--config=/etc/otelcol-config/otelcol-config.yml" ]
+    command: ["--config=/etc/otelcol-config/otelcol-config.yml"]
     volumes:
       - ./configs/:/etc/otelcol-config
     ports:
-      - "4317"          # OTLP over gRPC receiver
-      - "4318"          # OTLP over HTTP receiver
-      - "9464"          # Prometheus exporter
-      - "8888"          # metrics endpoint
+      - "4317" # OTLP over gRPC receiver
+      - "4318" # OTLP over HTTP receiver
+      - "9464" # Prometheus exporter
+      - "8888" # metrics endpoint
     depends_on:
       autoinstrumenter:
         condition: service_started
@@ -101,11 +102,10 @@ services:
     image: jaegertracing/all-in-one:1.57
     ports:
       - "16686:16686" # Query frontend
-      - "4317"        # OTEL GRPC traces collector
-      - "4318"        # OTEL HTTP traces collector
+      - "4317" # OTEL GRPC traces collector
+      - "4318" # OTEL HTTP traces collector
     environment:
       - COLLECTOR_OTLP_ENABLED=true
       - LOG_LEVEL=debug
-
 # curl http://localhost:16686/api/services
 # curl http://localhost:16686/api/traces?service=testserver
