--- a/test/integration/docker-compose-php-fpm-sock.yml
+++ b/test/integration/docker-compose-php-fpm-sock.yml
@@ -1,47 +1,47 @@
 services:
   nginx:
-      build:
-        context: ../..
-        dockerfile: ./test/integration/components/php/unix_sock_sql/docker/Dockerfile_nginx
-      container_name: hatest-nginx
-      ports:
-        - 8080:80
-      volumes:
-        - ../../test/integration/components/php/unix_sock_sql/src/:/var/www/html
-        - ../../test/integration/components/php/unix_sock_sql/config/nginx/sites-available:/etc/nginx/sites-available
-        - php-socket:/var/run/php-fpm
-      networks:
-        - test-network
-      depends_on:
-        - php
+    build:
+      context: ../..
+      dockerfile: ./test/integration/components/php/unix_sock_sql/docker/Dockerfile_nginx
+    container_name: hatest-nginx
+    ports:
+      - 8080:80
+    volumes:
+      - ../../test/integration/components/php/unix_sock_sql/src/:/var/www/html
+      - ../../test/integration/components/php/unix_sock_sql/config/nginx/sites-available:/etc/nginx/sites-available
+      - php-socket:/var/run/php-fpm
+    networks:
+      - test-network
+    depends_on:
+      - php
 
   php:
-      build:
-        context: ../..
-        dockerfile: ./test/integration/components/php/unix_sock_sql/docker/Dockerfile_php
-      container_name: hatest-php
-      ports:
-        - 9000:9000
-      volumes:
-        - ../../test/integration/components/php/unix_sock_sql/src/:/var/www/html
-        - /var/www/html/vendor/
-        - php-socket:/run/php-fpm
-      networks:
-        - test-network
-      depends_on:
-        - mysql
+    build:
+      context: ../..
+      dockerfile: ./test/integration/components/php/unix_sock_sql/docker/Dockerfile_php
+    container_name: hatest-php
+    ports:
+      - 9000:9000
+    volumes:
+      - ../../test/integration/components/php/unix_sock_sql/src/:/var/www/html
+      - /var/www/html/vendor/
+      - php-socket:/run/php-fpm
+    networks:
+      - test-network
+    depends_on:
+      - mysql
 
   mysql:
-      build:
-        context: ../..
-        dockerfile: ./test/integration/components/php/unix_sock_sql/docker/Dockerfile_mysql
-      container_name: hatest-mysql
-      ports:
-        - 3306:3306
-      environment:
-        MYSQL_ROOT_PASSWORD: "test"
-      networks:
-        - test-network
+    build:
+      context: ../..
+      dockerfile: ./test/integration/components/php/unix_sock_sql/docker/Dockerfile_mysql
+    container_name: hatest-mysql
+    ports:
+      - 3306:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: "test"
+    networks:
+      - test-network
 
   autoinstrumenter:
     build:
@@ -68,6 +68,7 @@ services:
       BEYLA_LOG_LEVEL: "DEBUG"
       BEYLA_BPF_DEBUG: "TRUE"
       BEYLA_HOSTNAME: "beyla"
+      BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
     depends_on:
       nginx:
         condition: service_started
@@ -83,14 +84,14 @@ services:
         limits:
           memory: 125M
     restart: unless-stopped
-    command: [ "--config=/etc/otelcol-config/otelcol-config-4017.yml" ]
+    command: ["--config=/etc/otelcol-config/otelcol-config-4017.yml"]
     volumes:
       - ./configs/:/etc/otelcol-config
     ports:
-      - "4017"          # OTLP over gRPC receiver
-      - "4018:4018"     # OTLP over HTTP receiver
-      - "9464"          # Prometheus exporter
-      - "8888"          # metrics endpoint
+      - "4017" # OTLP over gRPC receiver
+      - "4018:4018" # OTLP over HTTP receiver
+      - "9464" # Prometheus exporter
+      - "8888" # metrics endpoint
     depends_on:
       prometheus:
         condition: service_started
@@ -115,15 +116,15 @@ services:
     image: jaegertracing/all-in-one:1.57
     ports:
       - "16686:16686" # Query frontend
-      - "4317:4317"   # OTEL GRPC traces collector
-      - "4318:4318"   # OTEL HTTP traces collector
+      - "4317:4317" # OTEL GRPC traces collector
+      - "4318:4318" # OTEL HTTP traces collector
     environment:
       - COLLECTOR_OTLP_ENABLED=true
       - LOG_LEVEL=debug
 
 volumes:
-    mysql-data:
-    php-socket:
+  mysql-data:
+  php-socket:
 
 networks:
-    test-network:
+  test-network:
