--- a/test/integration/docker-compose-rust.yml
+++ b/test/integration/docker-compose-rust.yml
@@ -40,6 +40,7 @@ services:
       BEYLA_BPF_DEBUG: "TRUE"
       BEYLA_HOSTNAME: "beyla"
       BEYLA_BPF_TRACK_REQUEST_HEADERS: "true"
+      BEYLA_OTLP_TRACES_BATCH_TIMEOUT: "1ms"
     depends_on:
       testserver:
         condition: service_started
