Fix Mermaid diagram generation command

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -10,4 +10,4 @@ include docs.mk
 .PHONY: mermaid
 mermaid:
 	@echo "### Updating Mermaid diagrams"
-	$(PODMAN) run --entrypoint /bin/sh -it --rm -v .:/docs $(MERMAID_IMAGE) -c 'find /docs -name *.mmd | sed s/".mmd"// | xargs -I{} /home/mermaidcli/node_modules/.bin/mmdc -i {}.mmd -o {}.png -p /puppeteer-config.json'
+	$(PODMAN) run --entrypoint /bin/sh -it --rm -v .:/docs $(MERMAID_IMAGE) -c 'find /docs -name "*.mmd" | sed s/\.mmd$// | xargs -I{} /home/mermaidcli/node_modules/.bin/mmdc -i {}.mmd -o {}.png -p /puppeteer-config.json'
