--- a/.github/workflows/publish_dockerhub_pre_release.yml
+++ b/.github/workflows/publish_dockerhub_pre_release.yml
@@ -1,9 +1,17 @@
 # TODO: trigger only if testing or any other checks previously succeeded
-name: Push to DockerHub (release)
+name: Push to DockerHub (pre-release)
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+      # pre-release tags, examples:
+      # v1.0.0-alpha
+      # v1.0.0-alpha.1
+      # v1.0.0-alpha.beta
+      # v1.0.0-beta
+      # v1.0.0-beta.2
+      # v1.0.0-beta.11
+      # v1.0.0-rc.1
+      - "v[0-9]+.[0-9]+.[0-9]+-.+"
 
 permissions:
   contents: read
@@ -17,7 +25,7 @@ jobs:
       - id: checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
-          persist-credentials: 'false'
+          persist-credentials: "false"
       - id: push-beyla-to-dockerhub
         uses: grafana/shared-workflows/actions/build-push-to-dockerhub@fa48192dac470ae356b3f7007229f3ac28c48a25 # main
         with:
@@ -27,9 +35,7 @@ jobs:
             "linux/amd64"
             "linux/arm64"
           tags: |-
-            "type=semver,pattern={{major}}"
-            "type=semver,pattern={{major}}.{{minor}}"
-            "type=semver,pattern={{major}}.{{minor}}.{{patch}}"
+            "type=semver,pattern={{version}}"
           push: true
 
       - id: push-beyla-k8s-cache-to-dockerhub
@@ -42,7 +48,5 @@ jobs:
             "linux/amd64"
             "linux/arm64"
           tags: |-
-            "type=semver,pattern={{major}}"
-            "type=semver,pattern={{major}}.{{minor}}"
-            "type=semver,pattern={{major}}.{{minor}}.{{patch}}"
+            "type=semver,pattern={{version}}"
           push: true
