--- a/.golangci.yml
+++ b/.golangci.yml
@@ -32,6 +32,11 @@ linters:
     # Log a warning if an exclusion rule is unused.
     warn-unused: true
     rules:
+      # Exclude some linters from running on tests files.
+      - path: _test\.go
+        linters:
+          - gocyclo
+
       # revive returns false indent-error-flow errors in some cases where
       # an "else" clause is required to access the if condition context
       - path: .*
