--- a/.golangci.yml
+++ b/.golangci.yml
@@ -36,6 +36,7 @@ linters:
       - path: _test\.go
         linters:
           - gocyclo
+          - cyclop
 
       # revive returns false indent-error-flow errors in some cases where
       # an "else" clause is required to access the if condition context
