--- a/test/integration/components/beyla/Dockerfile
+++ b/test/integration/components/beyla/Dockerfile
@@ -17,14 +17,19 @@ COPY vendor/ vendor/
 COPY go.mod go.mod
 COPY go.sum go.sum
 COPY Makefile Makefile
+COPY test/integration/components/beyla/beyla_wrapper.sh /beyla_wrapper.sh
 
 # Build
 RUN make compile-for-coverage
 
 # Create final image from minimal + built binary
-FROM scratch
+FROM ubuntu
 
-WORKDIR /
-COPY --from=builder /src/bin/beyla .
+COPY --from=builder /src/bin/beyla /beyla
+# Wrap the executable in a script that waits for the processes to end
+# in order to avoid issues when tearing down the container on kernels 6.14+.
+# https://github.com/open-telemetry/opentelemetry-ebpf-instrumentation/issues/781
+COPY --from=builder /beyla_wrapper.sh /beyla_wrapper.sh
+RUN chmod +x /beyla_wrapper.sh
 
-ENTRYPOINT [ "/beyla" ]
+ENTRYPOINT [ "/beyla_wrapper.sh" ]
