fix: exclude beyla container from survey discovery

--- a/test/integration/configs/instrumenter-config-promscrape.yml
+++ b/test/integration/configs/instrumenter-config-promscrape.yml
@@ -1,6 +1,8 @@
 discovery:
   survey:
     - k8s_namespace: "*"
+  exclude_instrument:
+    - k8s_container_name: "beyla"
 routes:
   patterns:
     - /basic/:rnd
