Fix typos in Helm chart and documentation

--- a/charts/beyla/values.yaml
+++ b/charts/beyla/values.yaml
@@ -35,9 +35,9 @@ namespaceOverride: ""
 # annotations: {}
 
 rbac:
-  # -- Whether to create RBAC resources for Belya
+  # -- Whether to create RBAC resources for Beyla
   create: true
-  # -- Extra custer roles to be created for Belya
+  # -- Extra cluster roles to be created for Beyla
   extraClusterRoleRules: []
   # - apiGroups: []
   #   resources: []
