--- a/.github/workflows/obi-drift-check.yml
+++ b/.github/workflows/obi-drift-check.yml
@@ -109,8 +109,8 @@ jobs:
             
             # Run sync - capture full output for debugging
             set +e
-            ./scripts/check-obi-drift.sh --sync 2>&1 | tee sync_output.log
-            sync_exit=$?
+            bash -x ./scripts/check-obi-drift.sh --sync 2>&1 | tee sync_output.log
+            sync_exit=${PIPESTATUS[0]}
             set -e
             
             if [[ $sync_exit -ne 0 ]]; then
